new URI in App, Http, RipUtils.